--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -32,5 +32,11 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   dbt_project:
     # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+    # example:
+    #   +materialized: view
+    transform:
+        schema: transform
+        materialized: view
+    analysis:
+        schema: analysis
+        materialized: view
