--- a/packages.yml
+++ b/packages.yml
@@ -3,3 +3,5 @@ packages:
     version: 0.12.1
   - package: dbt-labs/dbt_external_tables
     version: 0.9.0
+  - package: dbt-labs/dbt_utils
+    version: [">=1.0.0", "<2.0.0"]
